--- a/src/main/resources/templates/editAndShow.html
+++ b/src/main/resources/templates/editAndShow.html
@@ -50,7 +50,7 @@
             <button type="button" style="width: 100%">Volver</button>
         </a>
     </form>
-    <form th:action="${'http://localhost:8080/delete/'+actividad.getId()}" method="post">
+    <form style="margin-top: 0" th:action="${'http://localhost:8080/delete/'+actividad.getId()}" method="post">
         <button style="width: 100%">Eliminar</button>
     </form>
 </main>
